Fixed horizontal scrollbar and add ons limit

--- a/src/components/AddOnSection/_style.scss
+++ b/src/components/AddOnSection/_style.scss
@@ -12,7 +12,7 @@
   }
   ul {
     list-style: none;
-    margin: 0;
+    margin: 0 $l-size 0 0;
     li {
       position: relative;
       p {
