--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -21,6 +21,8 @@ body {
   font-family: $body-font;
   background: $background-color;
   color: $text-color;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 button,
